# autonomous_exploration

./: CMakeLists.txt  Dockerfile  README.md  Target__Finder.py  package.xml
action/: autoExpl.action
autoExpl_msgs/: CMakeLists.txt  package.xml
autoexpl/: CMakeLists.txt  package.xml
autoexpl_msgs/: CMakeLists.txt  package.xml
autoexpl_msgs/action/: AutoExpl.action
autoexpl_msgs/msg/: Obstacle.msg  Target.msg
autoexpl_ros/: CMakeLists.txt  package.xml
autoexpl_ros/include/autoexpl_core/: Abstraction.hpp  FileHandler.hpp  GameSolver.hpp  InputOutput.hpp  RungeKutta4.hpp  StaticController.hpp  TicToc.hpp  TransitionFunction.hpp  WinningDomain.hpp  scots.hpp
autoexpl_ros/launch/: autonomous_exploration.launch
autoexpl_ros/scripts/: Target_Window.py  target_estimation.py
autoexpl_ros/src/: get_dynamic_location.cpp  robot_pose_publisher.cpp  scotsActionServer.cpp
autoexpl_simulations/: CMakeLists.txt  package.xml
autoexpl_simulations/launch/: ackermann_slam.launch  ackermann_world.launch  autoexpl_slam.launch  autoexpl_world.launch
autoexpl_simulations/rviz/: autoexpl.rviz
autoexpl_simulations/worlds/: docker.world  scots.world
autonomous_exploration/: CMakeLists.txt  package.xml
autonomous_exploration/include/autonomous_exploration/: Abstraction.hpp  FileHandler.hpp  GameSolver.hpp  InputOutput.hpp  StaticController.hpp  SymbolicSet.hh  TransitionFunction.hh  TransitionFunction.hpp  UniformGrid.hh  UniformGrid.hpp  WinningDomain.hpp  scots.hpp
autonomous_exploration/launch/: autonomous_exploration.launch
autonomous_exploration/scripts/: target_estimation.py
autonomous_exploration/src/: origin_pose_publisher.cpp  scotsActionClient.cpp  scotsActionServer.cpp
exploration_simulations/: CMakeLists.txt  package.xml
exploration_simulations/launch/: ackermann_slam.launch  ackermann_world.launch  autoexpl_slam.launch  autoexpl_world.launch
exploration_simulations/rviz/: autoexpl.rviz
exploration_simulations/worlds/: house2.world  scots2.world
include/autonomous_exploration/: FileHandler.hh  InputOutput.hh  IntegerInterval.hh
msg/: Target.msg
scripts/: frontier_finder.py  map.txt  map_call.py  target_estimation.py
src/: origin_pose_publisher.cpp  robot_pose_publisher.cpp  scotsActionClient.cpp  scotsActionServer.cpp
