<?xml version="1.0"?>
<package format="2">
  <name>autoExpl_msgs</name>
  <version>1.0.0</version>
  <description>Message and Action type: Custom messages and action for Autonomous Exploration packages.</description>

  <maintainer email="jaybhagiya@iisc.ac.in">Jay Bhagiya</maintainer>
  <author email="jaybhagiya@iisc.ac.in">Jay Bhagiya</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/autoExpl_msgs</url>
  <url type="repository">https://github.com/FocasLab/autonomous_exploration_pkgs</url>
  <url type="bugtracker">https://github.com/FocasLab/autonomous_exploration_pkgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
