<?xml version="1.0"?>
<package format="2">
  <name>autoexpl_ros</name>
  <version>1.0.0</version>
  <description>Autonomous Exploration package with action server and safe target finder.</description>

  <maintainer email="jaybhagiya@iisc.ac.in">Jay Bhagiya</maintainer>
  <author email="jaybhagiya@iisc.ac.in">Jay Bhagiya</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/</url>
  <url type="repository">https://github.com/FocasLab/autonomous_exploration_pkgs</url>
  <url type="bugtracker">https://github.com/FocasLab/autonomous_exploration_pkgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoexpl_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
</package>
